--- a/src/App.css
+++ b/src/App.css
@@ -43,13 +43,19 @@ form .add{
   border-collapse: collapse;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  justify-content: space-between;
+    gap: 1rem;
   margin: 0 auto;
 /* padding: 1rem; */
+
 }
 .booklist table td, th{
-  padding: 1rem;
-  width: 100;
+  padding:1rem 2rem;
+  /* width: 100%; */
+  
+}
+#actions{
+  width: 14.4rem;
 }
 .booklist table th{
   background-color: #4CAF50;
